--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>IbcTeste</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +12,46 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button"
+        data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav flex-fill w-100 flex-nowrap">
+          <li class="nav-item <%= "active" if current_page?(home_url) %>">
+            <a class="nav-link" href="/"><%= fas_icon 'home' %></a>
+          </li>
+          <li class="nav-item <%= "active" if current_page?(boards_url) %>">
+            <a class="nav-link" href="/boards">Boards</a>
+          </li>
+        </ul>
+        <a class="navbar-brand flex-fill justify-content-center" href="/">
+          <%= image_tag("#{image_path 'logo-ibc.png', alt: "logo"}") %>
+        </a>
+        <ul class="navbar-nav flex-fill w-100 justify-content-end">
+          <li>
+            <%= link_to new_board_path, {remote: true, 'data-toggle': 'modal', 'data-target': '#modal-new-board'} do 
+              fas_icon 'plus'
+            end %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <% if alert %>
+        <div class="alert alert-<%= alert.keys[0] %> alert-dismissible fade show" role="alert">
+          <%= alert.values[0] %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
+    </div>
+      <%= yield %>
+      <div id='modal-new-board' class='modal' tabindex="-1" role='dialog' aria-labelledby='newBoardModal' aria-hidden='true'></div>
+    </div>
   </body>
 </html>
