--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -13,7 +13,7 @@
   margin: 0 auto 1rem auto;
   max-width: 280px;
   .board-content {
-    background-color: #f2f2f2;
+    background-color: #2952a5;
     padding: .5rem;
     height: 100px;
     border: 1px solid black;
@@ -28,7 +28,7 @@
       width: 100%;
     }
     h2 {
-      color: black;
+      color: white;
       font-weight: bold;
     }
   }
@@ -36,31 +36,66 @@
     position: absolute;
     bottom: 5px;
     right: 25px;
-    color: black;
+    color: white;
     &:hover {
       color: red;
-    }
-  }
-}
-.board-bar {
-  display: flex;
-  justify-content: space-between;
-  max-width: 90%;
-  margin: .5rem auto;
-  h1 {
-    cursor: pointer;
-  }
-  .delete {
-    color: black;
-    &:hover {
-      color: red;
-    }
-    i {
-      vertical-align: sub;
     }
   }
 }
 .board-show {
-  background: #f2f2f2;
-  height: calc(100vh - 117px);
+  height: calc(100vh - 64px);
+  background: #2952a5;
+  color: white;
+  overflow-x: scroll;
+  .board-bar {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+    h1 {
+      cursor: pointer;
+      margin-bottom: 0;
+      font-weight: bold;
+    }
+    .delete {
+      color: white;
+      &:hover {
+        color: red;
+      }
+      i {
+        vertical-align: sub;
+      }
+    }
+  }
+  .steps-container {
+    margin: 50px .5rem 1rem .5rem;
+    display: flex;
+    flex-wrap: nowrap;
+    .step {
+      background: transparent;
+    }
+    .step-body {
+      background: #f2f2f2;
+      border-radius: 5px;
+      padding: 1rem;
+      form {
+        input {
+          margin-bottom: .5rem;
+          width: calc(100% - 30px);
+        }
+      }
+    }
+    .add-step {
+      display: inline-block;
+      padding: .5rem 1rem;
+      background: hsla(0,0%,100%,.24);
+      transition: background 85ms ease-in, opacity 40ms ease-in, border-color 85ms ease-in;
+      border-radius: 5px;
+      cursor: pointer;
+      &:hover {
+        background: hsla(0,0%,100%,.32); 
+      }
+    }
+  }
 }
