--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,9 @@
       color: white;
     }
   }
+  span {
+    margin-left: .5rem;
+  }
 }
 .navbar-brand img {
   height: 38px;
@@ -57,6 +60,9 @@
     justify-content: flex-start;
   }
 }
+.hide-mobile, .hide-xs {
+ display: none; 
+}
 .alert {
   margin-top: .5rem;
 }
@@ -75,4 +81,16 @@ h2 {
 input {
   border-radius: 5px;
   padding: .1rem .5rem;
+}
+
+@media (min-width: 576px) {
+  .hide-xs {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 768px) {
+  .hide-mobile {
+    display: inline-block;
+  }
 }
