--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,14 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button"
-        data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav flex-fill w-100 flex-nowrap">
           <li class="nav-item <%= "active" if current_page?(home_url) %>">
             <a class="nav-link" href="/"><%= fas_icon 'home' %></a>
           </li>
-          <li class="nav-item <%= "active" if current_page?(boards_url) %>">
-            <a class="nav-link" href="/boards">Boards</a>
+          <li class="nav-item hide-xs <%= "active" if current_page?(boards_url) %>">
+            <a class="nav-link" href="/boards"><%= fas_icon 'chalkboard' %><span class="hide-mobile">Boards</span></a>
           </li>
         </ul>
         <a class="navbar-brand flex-fill justify-content-center" href="/">
