--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,4 +1,4 @@
-<div class='board col-3'>
+<div class='board col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3'>
   <div class='board-content'>
     <%= link_to board do %>
       <h2><%= board.name %></h2>
