--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -10,7 +10,7 @@
     <% @board.steps.order(:position).each do |step| %>
       <%= render partial: '/steps/show', object: step, as: 'step', locals: { id: dom_id(step) } %>
     <% end %>
-    <div class='step col-3'>
+    <div class='step col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3''>
       <div class="add-step">
         <%= fas_icon 'plus' %>
         Adicionar uma Etapa
