--- a/app/views/steps/_show.html.erb
+++ b/app/views/steps/_show.html.erb
@@ -1,4 +1,4 @@
-<div class='step col-3' id="<%= id %>">
+<div class='step col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3' id="<%= id %>">
   <div class='step-body'>
     <div class='step-title'>
       <h2><%= step.name %></h2>
